# project_koskelantie

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  serve.sh  squeeze_images.sh
src/: app.rs  lib.rs
src/components/: button.rs  fetcher.rs  mod.rs
static/: .gitignore  data.json  index.html
