[package]
name = "project_koskelantie"
version = "0.1.0"
authors = ["Yew App Developer <name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = {version = "0.17.4", features = ["web_sys", "toml"] }
wasm-bindgen = "0.2.67"
anyhow = "1.0.37"
serde = "1"
serde_derive = "1"

